# IgricaOJocku

./: CMakeLists.txt  README.md  main.cpp  tilemap_data.txt
include/: map.h  textures.h
src/: map.cpp  textures.cpp
